server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__match_pattern_binding_in_its_branch.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(match p [a b] (+ |a b) _ a)"
---
----- BINDING
(match p [a b] (+ a b) _ a)
          ▔       ↑
