server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__parameter_used_in_a_let_body.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(defn f [x] (let [y x] (+ |x y)))"
---
----- BINDING
(defn f [x] (let [y x] (+ x y)))
         ▔                ↑
