server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__require_argument_is_evaluated.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 165
expression: "(defn run [module] (require |module))"
---
----- BINDING
(defn run [module] (require module))
           ▔▔▔▔▔▔           ↑
