server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__rest_parameter_after_destructuring.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(fn [{:a a} & rest] (|rest a))"
---
----- BINDING
(fn [{:a a} & rest] (rest a))
              ▔▔▔▔   ↑
