server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__seq_binding_in_a_when_modifier.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(seq [x :in xs :when (odd? |x)] x)"
---
----- BINDING
(seq [x :in xs :when (odd? x)] x)
      ▔                    ↑
