server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__try_catch_binds_the_error.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 205
expression: "(defn f [e] (try (g) ([e] (print |e))))"
---
----- BINDING
(defn f [e] (try (g) ([e] (print e))))
                       ▔         ↑
