server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__try_catch_binds_the_fiber.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 210
expression: "(try (g) ([err fib] (|fib)))"
---
----- BINDING
(try (g) ([err fib] (fib)))
               ▔▔▔   ↑
