server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__unquote_in_a_quasiquote_sees_the_parameter.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(defmacro m [x] ~(let [y ,|x] y))"
---
----- BINDING
(defmacro m [x] ~(let [y ,x] y))
             ▔            ↑
